--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,10 @@
 *{
     font-family: 'Roboto';
     margin: 0;
+    background-color: #dededf;
+    font-family: 'Roboto';
+}
+
+:root{
+    --title-span: "red"
 }
