--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 
 
 :root{
-    --color-red: #123412
-    --para-light: gray
+    --color-red: #123412;
+    --para-light: gray;
+    --nav-span: #212735
 }
