--- a/src/Components/NavBar/Nav.css
+++ b/src/Components/NavBar/Nav.css
@@ -1,18 +1,52 @@
-.right {
-    flex-direction: row;
-}
-.Nav-container{
-    justify-content: space-evenly;
+
+.nav-container{
+    margin-top: 10px;
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
-    flex: 0.4;
-    
 }
 
-h3{
-    color: black;
+.nav-icon{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
-h3 span {
-     color: #23545f;
+
+.nav-devloper{
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
+.nav-icon h2{
+    font-weight: 600;
+    font-size: 900;
+    align-items: center;
+}
+
+.nav-icon h2 span{
+    color: var(--nav-span);
+}
+
+.nav-property{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex: 0.4;
+    
+
+}
+
+.nav-property h6{
+    cursor: pointer;
+}
+
+
+@media screen and (max-width: 700px) {
+    .nav-property{
+        display: none;
+    }
+    .nav-contact{
+        color: red;
+    }
 }
