--- a/src/Components/NavBar/Nav.css
+++ b/src/Components/NavBar/Nav.css
@@ -20,9 +20,18 @@
     align-items: center;
 }
 .nav-icon h2{
+    padding-top: 6.5px;
     font-weight: 600;
     font-size: 900;
     align-items: center;
+    justify-content: center;
+}
+
+.nav-icon img{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex: content;
 }
 
 .nav-icon h2 span{
@@ -59,6 +68,8 @@
     .mob-screen .text-nav{
         text-align: center;
         font-weight: bold;
+        margin-bottom: 0 !important;
+    height: 50% !important
     }
     .mob-screen:hover{
         border-radius: 50px;
