--- a/src/screens/Home/Home.css
+++ b/src/screens/Home/Home.css
@@ -3,32 +3,44 @@
    flex-direction: row;
    justify-content: space-evenly;
    text-align: center;
-   
+   /* background-color: red; */
+   padding-top: 10px;
 }
-.right-container{
-    text-align: center;
-    align-items: center;
-    justify-content: center;
+.right-container img{
+    height: 650px;
 }
 
 .left-container{
-    
+    justify-content: center;
+    text-align: center;
     border-radius: 10px;
 }
-
-.title-text h1 span{
+.title-text h1{
+    font-weight: 500;
+    font-size: 40px;
+    text-align: start;
+    font-weight: bolde;
+    justify-content: start;
+}
+.btn-home{
+   position: ;
+}
+.title-text h1 .span{
     color: var(--color-red);
 }
 .contant p{
+    text-align: start;
     color: var(--para-light);
 }
+
 
 @media screen and (max-width: 700px) {
  .home-contaoner{
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
  }   
  .title-text h1{
     font-size: medium;
 } 
 }
+
