--- a/src/screens/Home/Home.css
+++ b/src/screens/Home/Home.css
@@ -36,17 +36,17 @@
 
 
 @media screen and (max-width: 700px) {
- .home-contaoner{
+ /* .home-contaoner{
     display: flex;
     flex-direction: column;
- }
+ } */
  .left-container h1{
     font-size: medium;
     
  }
  .right-container img{
     padding-top: 15px;
-    height: 400px;
+    height: 390px;
  }
 }
 
