--- a/src/screens/Skills/Skills.css
+++ b/src/screens/Skills/Skills.css
@@ -42,7 +42,7 @@
 @media screen and (max-width: 700px) {
     .skills-conrainer{
         margin: auto;
-
+        
     }
     .process{
         width: auto;
@@ -51,5 +51,14 @@
     .process p{
         font-size: xx-small;
         font-weight: 600;
+    }
+    .skills-img {
+        max-height: 400px;
+    }
+    .skills-right{
+        max-width: 120px;
+    }
+    .process{
+        max-height: 100px;
     }
 }
