--- a/src/screens/Projects/Project.css
+++ b/src/screens/Projects/Project.css
@@ -4,3 +4,11 @@
     flex: 0.3;
     justify-content: space-evenly;
 }
+
+
+@media  screen and (max-width: 700px) {
+    .card-items{
+        display: flex;
+        flex-direction: column;
+    }
+}
